solved mobile devices screen in projects page && also solved unique image preview projecs on mobile screen

--- a/frontend/src/app/projects/pages/projects-list-page/projects-list-page.component.css
+++ b/frontend/src/app/projects/pages/projects-list-page/projects-list-page.component.css
@@ -1,4 +1,5 @@
 project-card {
   display: flex;
-  margin: 35px;
+  margin-top: 5rem;
+  justify-content: center;
 }
